<resources>
    <string name="app_name">Practicum-Android-Diploma</string>

    <!-- BottomNavigationMenu -->
    <string name="main">Главная</string>
    <string name="favorite">Избранное</string>

    <!-- Экран "Команда" -->
    <string name="text_team">Команда</string>
    <string name="text_developer_worker">Над приложением работали</string>
    <string name="text_developer_name_first">Александр Нешев</string>
    <string name="text_developer_name_second">Антон Бабайлов</string>
    <string name="text_developer_name_third">Даниил Космачев</string>
    <string name="text_developer_name_four">Евгений Лебедев</string>
    <string name="text_developer_name_five">Екатерина Седова</string>

    <!-- Экран "Поиска" -->
    <string name="vacancies_search">Поиск вакансий</string>
    <string name="enter_request">Введите запрос</string>
    <string name="empty_list">Список пуст</string>
    <string name="failed_request">Не удалось получить\nсписок вакансий</string>
    <string name="salary_not_specified">зарплата не указана</string>
    <string name="seporator">,</string>g
    <string name="error_no_internet">Нет интернета</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="no_vacancy">Таких вакансий нет</string>
    <string name="error_in_loading_process">Проверьте подключение к интернету</string>

    <!-- Склонения слова "Вакансия" -->
    <plurals name="vacancy" translatable="false">
        <item quantity="zero">вакансий</item>
        <item quantity="one">вакансия</item>
        <item quantity="two">вакансии</item>
        <item quantity="few">вакансии</item>
        <item quantity="many">вакансий</item>
        <item quantity="other">вакансий</item>
    </plurals>

    <!-- Склонения слова "Найдено" -->
    <plurals name="found" translatable="false">
        <item quantity="zero">Найдено</item>
        <item quantity="one">Найдена</item>
        <item quantity="two">Найдено</item>
        <item quantity="few">Найдено</item>
        <item quantity="many">Найдено</item>
        <item quantity="other">Найдено</item>
    </plurals>

    <!-- Экран "Детали вакансии" -->
    <string name="vacancy">Вакансия</string>
    <string name="android_developer">Android-разработчик</string>
    <string name="rate_money">от 100 000 ₽</string>
    <string name="company_name">Еда</string>
    <string name="city">Москва</string>
    <string name="required_experience_field">Требуемый опыт</string>
    <string name="experience_field">От 1 года до 3 лет</string>
    <string name="type_of_employment">Полная занятость, Удаленная работа</string>
    <string name="vacancy_description">Описание вакансии</string>
    <string name="vacancy_description_value">Обязанности, Требования, Условия</string>
    <string name="key_skills">Ключевые навыки</string>
    <string name="key_kills_description">•  Знание классических алгоритмов и структуры данных\n•  Программирование для Android больше одного года\n•  Знание WebRTC</string>
    <string name="contact">Контакты</string>
    <string name="contact_person">Контактное лицо</string>
    <string name="contact_person_value">Ирина</string>
    <string name="contact_email">E-mail</string>
    <string name="email_value">i.lozgkina@yandex.ru</string>
    <string name="contact_phone">Телефон</string>
    <string name="phone_value">+7 (904) 329-27-71</string>
    <string name="comment">Комментарий</string>
    <string name="contact_comment_value">Заполнить анкету по форме можно на нашем сайте</string>
    <string name="responsibilities">Обязанности</string>
    <string name="requirements">Требования</string>
    <string name="conditions">Условия</string>
    <string name="responsibilities_value">•  Разрабатывать новую функциональность приложения\n•  Помогать с интеграцией нашего SDK в другие приложения\n•  Проектировать большие новые модули\n•  Писать UI- и unit-тесты\n•  Следить за работоспособностью сервиса и устранять технический долг</string>
    <string name="requirements_value">•  100% Kotlin\n•  WebRTC\n•  CI по модели Trunk Based Development</string>
    <string name="conditions_value">•  сильная команда, с которой можно расти\n•  возможность влиять на процесс и результат\n•  расширенная программа ДМС: стоматология, обследования, вызов врача на дом и многое другое</string>
    <string name="url">https://hh.kz/vacancy/</string>

    <!-- Экран "Настройки фильтрации" -->
    <string name="filtering_settings">Настройки фильтрации</string>
    <string name="places_of_work">Место работы</string>
    <string name="industry">Отрасль</string>
    <string name="expected_salary">Ожидаемая зарплата</string>
    <string name="expected_salary_hint">Введите сумму</string>
    <string name="no_salary_text">Не показывать без зарплаты</string>
    <string name="reset">Сбросить</string>
    <string name="apply">Применить</string>

    <!-- Экран "Выбор отрасли" -->
    <string name="selection_industry">Выбор отрасли</string>
    <string name="enter_industry">Введите отрасль</string>
    <string name="choose">Выбрать</string>
    <string name="industry_name">Авиаперевозки</string>
    <string name="not_found">Не удалось получить\n список</string>
    <string name="failed_message">Такой отрасли нет</string>

    <!-- Экран "Выбор места работы" -->
    <string name="place_work">Выбор места работы</string>
    <string name="country">Страна</string>
    <string name="region">Регион</string>
  
    <!-- Экран "Выбор страны" -->
    <string name="select_country">Выбор страны</string>
    <string name="country_name">Россия</string>

    <!-- Экран "Выбор региона" -->
    <string name="region_name">Москва</string>
    <string name="select_region">Выбор региона</string>
    <string name="enter_region">Введите регион</string>
    <string name="failed_message_region">Такого региона нет</string>

    <!-- Экран "Выбор страны" -->
    <string name="select_country">Выбор страны</string>
    <string name="country_name">Россия</string>


</resources>
