<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="ru.practicum.android.diploma.ui.vacancy.JobVacancyFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/six_space"
        tools:context=".ui.vacancy.JobVacancyFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sixteen_space"
            app:contentInsetStart="@dimen/zero_space"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/one_space"
                android:layout_marginTop="@dimen/two_space"
                android:layout_marginBottom="@dimen/two_space"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/tvVacancyHeadline"
                style="@style/VacancyHeadline"
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/one_space"
                android:text="@string/vacancy"
                app:layout_constraintStart_toEndOf="@id/ivBack" />

            <ImageView
                android:id="@+id/ivFavorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/two_space"
                android:layout_marginEnd="@dimen/two_space"
                android:src="@drawable/ic_favorites_off" />

            <ImageView
                android:id="@+id/ivShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/one_space"
                android:src="@drawable/ic_share"
                app:layout_constraintStart_toEndOf="@id/ivBack" />
        </androidx.appcompat.widget.Toolbar>


        <androidx.constraintlayout.widget.Group
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="tvVacancyName, tvSalary, VacancyCard, VacancyDetails" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/four_space" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/four_space" />

        <TextView
            android:id="@+id/tvVacancyName"
            style="@style/VacancyName"
            android:text="@string/android_developer"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:text="@string/android_developer" />

        <TextView
            android:id="@+id/tvSalary"
            style="@style/VacancyHeadline"
            android:layout_width="@dimen/zero_space"
            android:layout_marginStart="@dimen/zero_space"
            android:layout_marginTop="@dimen/one_space"
            android:text="@string/rate_money"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/tvVacancyName"
            tools:text="@string/rate_money" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/VacancyCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/six_space"
            android:background="@drawable/vacancy_card"
            android:padding="@dimen/four_space"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/tvSalary">

            <ImageView
                android:id="@+id/ivLogoPlug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/vacancy_card"
                android:src="@drawable/logo_plug"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvCompanyName"
                style="@style/VacancyHeadline"
                android:layout_marginStart="@dimen/two_space"
                android:layout_marginTop="@dimen/zero_space"
                android:background="@drawable/vacancy_card"
                android:text="@string/company_name"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/ivLogoPlug"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/company_name" />

            <TextView
                android:id="@+id/tvCity"
                style="@style/VacancyDescription"
                android:background="@drawable/vacancy_card"
                android:text="@string/city"
                app:layout_constraintStart_toEndOf="@id/ivLogoPlug"
                app:layout_constraintTop_toBottomOf="@id/tvCompanyName"
                tools:text="@string/city" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/VacancyDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/six_space"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/VacancyCard">

            <TextView
                android:id="@+id/tvRequiredExperienceField"
                style="@style/VacancyDetailsCategory"
                android:text="@string/required_experience_field"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/required_experience_field" />

            <TextView
                android:id="@+id/tvExperienceField"
                style="@style/VacancyDetails"
                android:text="@string/experience_field"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvRequiredExperienceField"
                tools:text="@string/experience_field" />

            <TextView
                android:id="@+id/tvTypeOfEmployment"
                style="@style/VacancyDetails"
                android:layout_marginTop="@dimen/two_space"
                android:text="@string/type_of_employment"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvExperienceField"
                tools:text="@string/type_of_employment" />

            <TextView
                android:id="@+id/tvVacancyDescription"
                style="@style/VacancyHeadline"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/zero_space"
                android:layout_marginTop="@dimen/eight_space"
                android:text="@string/vacancy_description"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTypeOfEmployment"
                tools:text="@string/vacancy_description" />

            <TextView
                android:id="@+id/tvVacancyDescriptionValue"
                style="@style/VacancyDetailsCategory"
                android:layout_marginTop="@dimen/four_space"
                android:text="@string/vacancy_description_value"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvVacancyDescription"
                tools:text="@string/vacancy_description_value" />

        </androidx.constraintlayout.widget.ConstraintLayout>






    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
