<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.place.PlacesOfWorkFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sixteen_space"
        app:contentInsetStart="@dimen/zero_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/one_space"
            android:layout_marginTop="@dimen/two_space"
            android:layout_marginBottom="@dimen/two_space"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tvPlaceWorkHeadline"
            style="@style/VacancyHeadline"
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/one_space"
            android:text="@string/place_work"
            app:layout_constraintStart_toEndOf="@id/ivBack" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCountry"
        style="@style/FilteringSettingsTextInputLayoutStyle"
        android:layout_marginTop="@dimen/four_space"
        android:background="@color/white_black"
        android:hint="@string/country"
        android:imeOptions="actionDone|flagNoExtractUi"
        android:textAlignment="viewStart"
        app:boxBackgroundColor="@color/white_black"
        app:boxStrokeWidth="@dimen/zero_space"
        app:boxStrokeWidthFocused="@dimen/zero_space"
        app:hintTextColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietCountry"
            android:layout_width="match_parent"
            android:layout_height="@dimen/twelve_space"
            android:clickable="true"
            android:enabled="false"
            android:fontFamily="@font/ys_display_regular"
            android:inputType="textCapSentences"
            android:lines="1"
            android:maxLength="225"
            android:singleLine="true"
            android:textAlignment="viewStart"
            android:textColor="@color/black_white"
            android:textFontWeight="400"
            android:textSize="@dimen/sixteen_size_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/ivArrowRightCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_right"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/tilCountry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tilCountry" />

    <ImageView
        android:id="@+id/ivCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cross"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tilCountry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tilCountry" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRegion"
        style="@style/FilteringSettingsTextInputLayoutStyle"
        android:background="@color/white_black"
        android:hint="@string/region"
        android:imeOptions="actionDone|flagNoExtractUi"
        android:textAlignment="viewStart"
        app:boxBackgroundColor="@color/white_black"
        app:boxStrokeWidth="@dimen/zero_space"
        app:boxStrokeWidthFocused="@dimen/zero_space"
        app:hintTextColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilCountry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietRegion"
            android:layout_width="match_parent"
            android:layout_height="@dimen/twelve_space"
            android:clickable="true"
            android:enabled="false"
            android:fontFamily="@font/ys_display_regular"
            android:inputType="textCapSentences"
            android:lines="1"
            android:maxLength="225"
            android:singleLine="true"
            android:textAlignment="viewStart"
            android:textColor="@color/black_white"
            android:textFontWeight="400"
            android:textSize="@dimen/sixteen_size_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/ivArrowRightRegion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_right"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/tilRegion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tilRegion" />

    <ImageView
        android:id="@+id/ivRegion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cross"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tilRegion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tilRegion" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/four_space" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/four_space" />

    <Button
        android:id="@+id/bChoose"
        style="@style/Button"
        android:background="@drawable/rounded_background_12_blue"
        android:text="@string/choose"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder" />

    <TextView
        android:id="@+id/tvNoInternetPlaceholder"
        style="@style/PlaceholderMessage"
        android:text="@string/error_no_internet"
        android:visibility="gone"
        app:drawableTopCompat="@drawable/placeholder_no_internet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/tilRegion" />


</androidx.constraintlayout.widget.ConstraintLayout>
