<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.industry.IndustrySelectionFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sixteen_space"
        app:contentInsetStart="@dimen/zero_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/one_space"
            android:layout_marginTop="@dimen/two_space"
            android:layout_marginBottom="@dimen/two_space"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tvIndustryHeadline"
            style="@style/VacancyHeadline"
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/one_space"
            android:text="@string/selection_industry"
            app:layout_constraintStart_toEndOf="@id/ivBack" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/four_space" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/four_space" />

    <EditText
        android:id="@+id/etIndustry"
        style="@style/Search"
        android:background="@drawable/rounded_search_edit_text"
        android:focusableInTouchMode="true"
        android:hint="@string/enter_industry"
        android:lines="1"
        android:paddingStart="@dimen/three_and_a_half_space"
        android:textCursorDrawable="@drawable/cursor_search"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/ivIndustry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight_space"
        android:layout_marginEnd="@dimen/five_space"
        android:background="@drawable/rounded_search_edit_text"
        android:src="@drawable/ic_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvIndustryList"
        android:layout_width="@dimen/zero_space"
        android:layout_height="@dimen/zero_space"
        android:layout_marginTop="@dimen/two_space"
        android:animationCache="true"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/etIndustry"
        tools:listitem="@layout/item_industry" />

    <Button
        android:id="@+id/bChoose"
        style="@style/Button"
        android:visibility="gone"
        android:background="@drawable/rounded_background_12_blue"
        android:text="@string/choose"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder" />

</androidx.constraintlayout.widget.ConstraintLayout>
